--- a/CSS/spring-style.css
+++ b/CSS/spring-style.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Noto Sans KR' sans-serif;
     outline: solid 1px red;
 }
 .container {
@@ -37,6 +38,7 @@ a:hover {
 .spring {
     width: 100%;
     height: 100px;
+    overflow: hidden;
 }
 .banner>h1 {
     position: absolute;
@@ -44,13 +46,10 @@ a:hover {
     left: 20px;
     font-weight: bold;
 }
-.season-fruit {
+.middle {
     background: #FFDDE5;
-    width: 100%;
-    height: 100%;
 }
-.season-fruit>h2 {
-    color: #fff;
+.season-fruit h2, p {
     margin-left: 20px;
 }
 .strawberry-img {
@@ -58,8 +57,8 @@ a:hover {
     height: 230px;
     margin: 20px;
 }
-.strawberry p {
-    background: #fff;
+.strawberry {
+    background-color: #fff;
     float: right;
 }
 .hanrabong-img {
