--- a/CSS/spring-style.css
+++ b/CSS/spring-style.css
@@ -37,37 +37,35 @@ a:hover {
 }
 .spring {
     width: 100%;
-    height: 100px;
-    overflow: hidden;
+    height: 130px;
 }
 .banner>h1 {
     position: absolute;
     top: 30%;
     left: 20px;
     font-weight: bold;
+    color: #fff;
 }
 .middle {
     background: #FFDDE5;
 }
-.season-fruit h2, p {
+.season-fruit h2,
+p,
+.season-fruit h3 {
     margin-left: 20px;
 }
-.strawberry-img {
-    width: 20%;
-    height: 230px;
-    margin: 20px;
-}
-.strawberry {
-    background-color: #fff;
-    float: right;
-}
-.hanrabong-img {
-    width: 20%;
-    height: 230px;
-    margin: 20px;
-}
+.strawberry-img,
+.hanrabong-img,
 .maesil-img {
     width: 20%;
     height: 230px;
-    margin: 20px;
+    margin: 15px;
+}
+.strawberry-comment,
+.hanrabong-comment,
+.maesil-comment {
+    width: 80%;
+    height: auto;
+    background: #fff;
+    float: right;
 }
