--- a/CSS/winter-style.css
+++ b/CSS/winter-style.css
@@ -36,13 +36,14 @@ a:hover {
 }
 .winter {
     width: 100%;
-    height: 100px;
+    height: 130px;
 }
 .banner>h1 {
     position: absolute;
     top: 30%;
     left: 20px;
     font-weight: bold;
+    color: #fff;
 }
 .season-fruit {
     background: #FFDDE5;
