--- a/CSS/index-style.css
+++ b/CSS/index-style.css
@@ -60,3 +60,10 @@ a:hover {
 .card-menu {
     background: #FFDDE5;
 }
+footer {
+    background: #FFF795;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+}
