--- a/CSS/index-style.css
+++ b/CSS/index-style.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
 * {
-    margin: 0;
-    padding: 0;
     font-family: 'Noto Sans KR' sans-serif;
-    outline: solid 1px red;
+}
+html {
+    width: 100%;
+    height: 100%;
+    padding: 0;
 }
 .container {
     max-width: 100%;
     height: 1854px;
+    padding: 0;
 }
 header {
     background: #FFF795;
-    height: 44px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    width: 100%;
+    margin: 0;
 }
 .logo {
     width: 150px;
@@ -24,12 +25,10 @@ header {
 .toggle {
     display: none;
 }
-.menu li {
-    list-style: none;
-}
-.item-list {
-    display: flex;
-    column-gap: 0.75rem;
+.menu {
+    float: right;
+    margin: 15px;
+    font-size: 20px;
 }
 a {
     text-decoration: none;
