--- a/CSS/index-style.css
+++ b/CSS/index-style.css
@@ -38,9 +38,11 @@ a {
 a:hover {
     color: #FFDDE5;
 }
+.slideshow {
+    margin-top: 70px;
+}
 .today-fruit,
 .fruit-receipe {
-    border-radius: 1rem;
     flex: 1 0 240px;
     width: 600px;
     margin: 100px 72px 0 72px;
@@ -51,13 +53,22 @@ a:hover {
     background: #FFF795;
     text-align: center;
     font-weight: bold;
+    border-radius: 10px 10px 0 0;
 }
 .strawberry,
 .strawberry-canape {
     max-width: 50%;
+    height: 200px;
+    border-radius: 0 0 0 10px;
 }
 .card-menu {
     background: #FFDDE5;
+    float: right;
+    width: 50%;
+    height: 200px;
+    text-align: center;
+    align-items: center;
+    border-radius: 0 0 10px 0;
 }
 footer {
     background: #FFF795;
