--- a/CSS/strawberry-receipe-style.css
+++ b/CSS/strawberry-receipe-style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
 * {
-    margin: 0;
-    padding: 0;
     font-family: 'Noto Sans KR' sans-serif;
     outline: solid 1px red;
+}
+html {
+    margin: 0;
+    padding: 0;
 }
 .container {
     max-width: 100%;
@@ -12,9 +14,8 @@
 .middle {
     background: #FFDDE5;
 }
-nav {
+header {
     width: 100%;
-    margin: 0;
     background: #FFF795;
 }
 .logo {
