--- a/CSS/summer-style.css
+++ b/CSS/summer-style.css
@@ -71,6 +71,7 @@ a:hover {
 }
 
 .peach-img {
-    max-width: 100%;
-    height:auto;
+    max-width: 20%;
+    height: 230px;
+    margin: 20px;
 }
