--- a/CSS/strawberry-receipe-style.css
+++ b/CSS/strawberry-receipe-style.css
@@ -1,21 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
 * {
-    font-family: 'Noto Sans KR' sans-serif;
-    outline: solid 1px red;
-}
-html {
     margin: 0;
     padding: 0;
+    font-family: 'Noto Sans KR' sans-serif;
+    outline: solid 1px red;
 }
 .container {
     max-width: 100%;
     height: 1854px;
 }
-.middle {
-    background: #FFDDE5;
-}
-header {
+nav {
     width: 100%;
+    margin: 0;
     background: #FFF795;
 }
 .logo {
@@ -41,7 +37,7 @@ a:hover {
 }
 .strawberry-receipe {
     background: #FFDDE5;
-    margin-top: 30px;
+    margin: 20px 0 20px 0;
 }
 .strawberry-receipe h3 {
     font-weight: normal;
@@ -54,12 +50,13 @@ a:hover {
 .strawberry-syrup,
 .strawberry-mozzi,
 .strawberry-sandwich {
-    width: 331px;
+    float: left;
+    background: #fff;
+    width: 33%;
     height: 395px;
     border-radius: 10px;
-    margin: 20px 30px 0 60px;
+    margin: 10px;
     padding: 40px;
-    float: left;
 }
 .strawberry-canape-img,
 .strawberry-jam-img,
@@ -67,8 +64,8 @@ a:hover {
 .strawberry-syrup-img,
 .strawberry-mozzi-img,
 .strawberry-sandwich-img {
-    width: 274px;
-    height: 268px;
+    width: 80%;
+    height: 80%;
     display: block;
     margin: auto;
 }
