--- a/CSS/summer-style.css
+++ b/CSS/summer-style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
-* {   
+* {
     margin: 0;
     padding: 0;
     font-family: 'Noto Sans KR' sans-serif;
@@ -27,6 +27,8 @@ a {
     text-decoration: none;
     color: black;
     margin: 20px;
+    display: inline-block;
+    ;
 }
 a:hover {
     color: #FFDDE5;
@@ -36,8 +38,8 @@ a:hover {
     margin: 30px;
 }
 .summer {
-    width: 100%;
-    height: 100px;
+    width: 100%
+    height: auto;
 }
 .banner>h1 {
     position: absolute;
@@ -46,32 +48,41 @@ a:hover {
     font-weight: bold;
     color: #fff;
 }
-.season-fruit {
-    background: #FFDDE5;
-    width: 100%;
-    height: 100%;
+.middle {
+    background-color: #FFDDE5;
 }
-.season-fruit>h2 {
+.season-fruit {
+    display: inline;
+}
+.season-fruit h2 {
     color: #fff;
     margin-left: 20px;
 }
-.watermelon-img {
-    width: 20%;
-    height: 230px;
-    margin: 20px;
-}
-.watermelon p {
-    background: #fff;
-    float: right;
-}
-.grape-img {
-    width: 20%;
-    height: 230px;
-    margin: 20px;
-}
 
-.peach-img {
-    max-width: 20%;
-    height: 230px;
-    margin: 20px;
+.season-fruit h3 {
+    color: rgb(0, 0, 0);
+    margin-left: 20px;
+}
+.watermelon, .grape, .peach {
+    width: 80%;
+}
+.watermelon-img, .peach-img, .grape-img {
+    width: 20%;
+    height: 100%;
+    text-align: center;
+}
+.peach-img, .grape-img {
+    width: 30%;
+}
+.watermelon-comment, .grape-comment, .peach-comment {
+    width: 100%;
+    display: inline-flex;
+    word-break:break-all;
+    margin-left: 15px;
+}
+.textwt, .textgp, .textpc {
+    margin : 0 3%;
+    width: 100%;
+    display: inline;
+    font-size: 20px;
 }
