--- a/CSS/spring-style.css
+++ b/CSS/spring-style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     font-family: 'Noto Sans KR' sans-serif;
-    outline: solid 1px red;
 }
 .container {
     width: 100%;
@@ -27,8 +26,6 @@ a {
     text-decoration: none;
     color: black;
     margin: 20px;
-    display: inline-block;
-    ;
 }
 a:hover {
     color: #FFDDE5;
@@ -83,4 +80,6 @@ a:hover {
     width: 100%;
     display: inline;
     font-size: 20px;
+    background-color: #fff;
+    border-radius: 3px 3px 3px 3px;
 }
