--- a/CSS/summer-style.css
+++ b/CSS/summer-style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     font-family: 'Noto Sans KR' sans-serif;
-    outline: solid 1px red;
 }
 .container {
     width: 100%;
@@ -39,7 +38,6 @@ a:hover {
 }
 .summer {
     width: 100%
-    height: auto;
 }
 .banner>h1 {
     position: absolute;
@@ -85,4 +83,7 @@ a:hover {
     width: 100%;
     display: inline;
     font-size: 20px;
+    background-color: #fff;
+    border-radius: 3px 3px 3px 3px;
+
 }
