--- a/CSS/winter-style.css
+++ b/CSS/winter-style.css
@@ -35,8 +35,13 @@ a:hover {
     margin: 30px;
 }
 .winter {
-    width: 100%;
-    height: 130px;
+    width : auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+.middle {
+    background-color: #FFDDE5;
 }
 .banner>h1 {
     position: absolute;
@@ -47,25 +52,33 @@ a:hover {
 }
 .season-fruit {
     background: #FFDDE5;
-    width: 100%;
-    height: 100%;
+    display: inline;
 }
-.season-fruit>h2 {
+.season-fruit > h2 {
     color: #fff;
     margin-left: 20px;
 }
-.tangerin-img {
+.season-fruit h3 {
+    margin-left: 20px;
+}
+.tangerin, .citron, .strawberry {
+    width : 80%;
+}
+.tangerin-comment, .citron-comment, .strawberry-comment {
+    width: 100%;
+    display: inline-flex;
+    word-break: break-all;
+}
+.tangerin-img, .citron-img, .strawberry-img {
     width: 20%;
     height: 230px;
     margin: 20px;
 }
-.citron-img {
-    width: 20%;
-    height: 230px;
-    margin: 20px;
-}
-.strawberry-img {
-    width: 20%;
-    height: 230px;
-    margin: 20px;
+.texttg, .textct, .textstr {
+    margin : 0 3%;
+    width: 100%;
+    display: inline;
+    font-size: 20px;
+    background-color: #fff;
+    border-radius: 3px 3px 3px 3px;
 }
