--- a/css/index-style.css
+++ b/css/index-style.css
@@ -15,6 +15,7 @@ html {
 header {
     background: #FFF795;
     width: 100%;
+    height: 54px;
     margin: 0;
 }
 .logo {
@@ -24,6 +25,9 @@ header {
 }
 .toggle {
     display: none;
+    float: right;
+    margin: 5px 10px 10px 0;
+    font-size: 30px;
 }
 .menu {
     float: right;
@@ -33,7 +37,7 @@ header {
 a {
     text-decoration: none;
     color: black;
-    margin: 20px;
+    margin-left: 20px;
 }
 a:hover {
     color: #FFDDE5;
@@ -76,4 +80,30 @@ footer {
     height: 50px;
     position: fixed;
     bottom: 0;
-} 
+}
+@media screen and (max-width: 992px) {
+    .toggle {
+        display: block;
+        cursor: pointer;
+    }
+    .menu {
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50px;
+        /* width: 100%; */
+        background-color: #fffcd9;
+        height: 0;
+        overflow: hidden;
+    }
+    .item {
+        justify-content: space-around;
+        text-align: center;
+    }
+    .show-menu {
+        width: 100%;
+        height: 200px;
+        margin: 0;
+    }
+}
