--- a/css/spring-style.css
+++ b/css/spring-style.css
@@ -17,6 +17,12 @@ header {
     height: 50px;
     margin-left: 10px;
 }
+.toggle {
+    display: none;
+    float: right;
+    margin: 5px 10px 10px 0;
+    font-size: 30px;
+}
 .menu {
     float: right;
     margin: 15px;
@@ -42,21 +48,25 @@ a:hover {
 }
 .banner>h1 {
     position: absolute;
-    top: 30%;
+    top: 35%;
     left: 20px;
     font-weight: bold;
     color: #fff;
 }
 .middle {
     background: #FFDDE5;
+    height: 1000px;
 }
 .season-fruit {
     display: inline;
 }
+.season-fruit h2,
 .season-fruit h3 {
-    margin-left: 20px;
+    margin: 20px 0 0 20px;
 }
-
+.season-fruit a {
+    margin: 0;
+}
 .strawberry, .hanra, .maesil {
     width: 80%;
 }
@@ -65,15 +75,12 @@ a:hover {
     display: inline-flex;
     word-break:break-all;
 }
-
 .strawberry-img, .hanra-img, .maesil-img {
     width: 20%;
     height: 100%;
     text-align: center;
-}
-.a {
-    margin : 0;
-    padding: 0;
+    border-radius: 5px;
+    margin-left: 20px;
 }
 .textstr, .texthr, .textms {
     margin : 0 3%;
@@ -81,5 +88,38 @@ a:hover {
     display: inline;
     font-size: 20px;
     background-color: #fff;
-    border-radius: 3px 3px 3px 3px;
+    border-radius: 5px;
+}
+footer {
+    background: #FFF795;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
 } 
+@media screen and (max-width: 992px) {
+    .toggle {
+        display: block;
+        cursor: pointer;
+    }
+    .menu {
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50px;
+        /* width: 100%; */
+        background-color: #faeac8;
+        height: 0;
+        overflow: hidden;
+    }
+    .item {
+        justify-content: space-around;
+        text-align: center;
+    }
+    .show-menu {
+        width: 100%;
+        height: 200px;
+        margin: 0;
+    }
+}
