--- a/css/summer-style.css
+++ b/css/summer-style.css
@@ -17,6 +17,12 @@ header {
     height: 50px;
     margin-left: 10px;
 }
+.toggle {
+    display: none;
+    float: right;
+    margin: 5px 10px 10px 0;
+    font-size: 30px;
+}
 .menu {
     float: right;
     margin: 15px;
@@ -26,8 +32,6 @@ a {
     text-decoration: none;
     color: black;
     margin: 20px;
-    display: inline-block;
-    ;
 }
 a:hover {
     color: #FFDDE5;
@@ -37,46 +41,44 @@ a:hover {
     margin: 30px;
 }
 .summer {
-    width: 100%
+    width: 100%;
+    height: 130px;
 }
 .banner>h1 {
     position: absolute;
-    top: 30%;
+    top: 35%;
     left: 20px;
     font-weight: bold;
     color: #fff;
 }
 .middle {
-    background-color: #FFDDE5;
+    background: #FFDDE5;
+    height: 1000px;
 }
 .season-fruit {
     display: inline;
 }
-.season-fruit h2 {
-    color: #fff;
-    margin-left: 20px;
-}
-
+.season-fruit h2,
 .season-fruit h3 {
-    color: rgb(0, 0, 0);
-    margin-left: 20px;
+    margin: 20px 0 0 20px;
+}
+.season-fruit a {
+    margin: 0;
 }
 .watermelon, .grape, .peach {
     width: 80%;
-}
-.watermelon-img, .peach-img, .grape-img {
-    width: 20%;
-    height: 100%;
-    text-align: center;
-}
-.peach-img, .grape-img {
-    width: 30%;
 }
 .watermelon-comment, .grape-comment, .peach-comment {
     width: 100%;
     display: inline-flex;
     word-break:break-all;
-    margin-left: 15px;
+}
+.watermelon-img, .grape-img, .peach-img {
+    width: 20%;
+    height: 100%;
+    text-align: center;
+    border-radius: 5px;
+    margin-left: 20px;
 }
 .textwt, .textgp, .textpc {
     margin : 0 3%;
@@ -84,6 +86,38 @@ a:hover {
     display: inline;
     font-size: 20px;
     background-color: #fff;
-    border-radius: 3px 3px 3px 3px;
-
+    border-radius: 5px;
+}
+footer {
+    background: #FFF795;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
 } 
+@media screen and (max-width: 992px) {
+    .toggle {
+        display: block;
+        cursor: pointer;
+    }
+    .menu {
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50px;
+        /* width: 100%; */
+        background-color: #faeac8;
+        height: 0;
+        overflow: hidden;
+    }
+    .item {
+        justify-content: space-around;
+        text-align: center;
+    }
+    .show-menu {
+        width: 100%;
+        height: 200px;
+        margin: 0;
+    }
+}
