--- a/css/winter-style.css
+++ b/css/winter-style.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    outline: solid 1px red;
+    font-family: 'Noto Sans KR' sans-serif;
 }
 .container {
     width: 100%;
@@ -16,6 +16,12 @@ header {
     width: 150px;
     height: 50px;
     margin-left: 10px;
+}
+.toggle {
+    display: none;
+    float: right;
+    margin: 5px 10px 10px 0;
+    font-size: 30px;
 }
 .menu {
     float: right;
@@ -35,44 +41,44 @@ a:hover {
     margin: 30px;
 }
 .winter {
-    width : auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
-}
-.middle {
-    background-color: #FFDDE5;
+    width: 100%;
+    height: 130px;
 }
 .banner>h1 {
     position: absolute;
-    top: 30%;
+    top: 35%;
     left: 20px;
     font-weight: bold;
     color: #fff;
 }
-.season-fruit {
+.middle {
     background: #FFDDE5;
+    height: 1000px;
+}
+.season-fruit {
     display: inline;
 }
-.season-fruit > h2 {
-    color: #fff;
-    margin-left: 20px;
-}
+.season-fruit h2,
 .season-fruit h3 {
-    margin-left: 20px;
+    margin: 20px 0 0 20px;
+}
+.season-fruit a {
+    margin: 0;
 }
 .tangerin, .citron, .strawberry {
-    width : 80%;
+    width: 80%;
 }
 .tangerin-comment, .citron-comment, .strawberry-comment {
     width: 100%;
     display: inline-flex;
-    word-break: break-all;
+    word-break:break-all;
 }
 .tangerin-img, .citron-img, .strawberry-img {
     width: 20%;
-    height: 230px;
-    margin: 20px;
+    height: 100%;
+    text-align: center;
+    border-radius: 5px;
+    margin-left: 20px;
 }
 .texttg, .textct, .textstr {
     margin : 0 3%;
@@ -80,5 +86,38 @@ a:hover {
     display: inline;
     font-size: 20px;
     background-color: #fff;
-    border-radius: 3px 3px 3px 3px;
+    border-radius: 5px;
+}
+footer {
+    background: #FFF795;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
 } 
+@media screen and (max-width: 992px) {
+    .toggle {
+        display: block;
+        cursor: pointer;
+    }
+    .menu {
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50px;
+        /* width: 100%; */
+        background-color: #faeac8;
+        height: 0;
+        overflow: hidden;
+    }
+    .item {
+        justify-content: space-around;
+        text-align: center;
+    }
+    .show-menu {
+        width: 100%;
+        height: 200px;
+        margin: 0;
+    }
+}
