--- a/css/spring-style.css
+++ b/css/spring-style.css
@@ -8,9 +8,11 @@
     width: 100%;
     height: 1854px;
 }
-header {
-    margin: 0;
+nav {
     background: #FFF795;
+    width: 100%;
+    height: 54px;
+    margin: 0;
 }
 .logo {
     width: 150px;
@@ -95,4 +97,30 @@ footer {
     height: 50px;
     position: fixed;
     bottom: 0;
+}
+@media screen and (max-width: 992px) {
+    .toggle {
+        display: block;
+        cursor: pointer;
+    }
+    .menu {
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50px;
+        /* width: 100%; */
+        background-color: #fffcd9;
+        height: 0;
+        overflow: hidden;
+    }
+    .item {
+        justify-content: space-around;
+        text-align: center;
+    }
+    .show-menu {
+        width: 100%;
+        height: 200px;
+        margin: 0;
+    }
 }
