--- a/css/summer-style.css
+++ b/css/summer-style.css
@@ -5,44 +5,19 @@
     font-family: 'Noto Sans KR' sans-serif;
 }
 .container {
+    margin-top: 80px;
     width: 100%;
     height: 1854px;
-}
-header {
-    margin: 0;
-    background: #FFF795;
-}
-.logo {
-    width: 150px;
-    height: 50px;
-    margin-left: 10px;
-}
-.toggle {
-    display: none;
-    float: right;
-    margin: 5px 10px 10px 0;
-    font-size: 30px;
-}
-.menu {
-    float: right;
-    margin: 15px;
-    font-size: 20px;
-}
-a {
-    text-decoration: none;
-    color: black;
-    margin: 20px;
-}
-a:hover {
-    color: #FFDDE5;
 }
 .banner {
     position: relative;
     margin: 30px;
 }
 .summer {
-    width: 100%;
-    height: 130px;
+    width : auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 .banner>h1 {
     position: absolute;
@@ -71,14 +46,13 @@ a:hover {
 .watermelon-comment, .grape-comment, .peach-comment {
     width: 100%;
     display: inline-flex;
-    word-break:break-all;
+    word-break: break-all;
 }
 .watermelon-img, .grape-img, .peach-img {
     width: 20%;
     height: 100%;
-    text-align: center;
-    border-radius: 5px;
     margin-left: 20px;
+    border-radius: 5px;
 }
 .textwt, .textgp, .textpc {
     margin : 0 3%;
@@ -94,30 +68,4 @@ footer {
     height: 50px;
     position: fixed;
     bottom: 0;
-} 
-@media screen and (max-width: 992px) {
-    .toggle {
-        display: block;
-        cursor: pointer;
-    }
-    .menu {
-        flex-direction: column;
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 50px;
-        /* width: 100%; */
-        background-color: #faeac8;
-        height: 0;
-        overflow: hidden;
-    }
-    .item {
-        justify-content: space-around;
-        text-align: center;
-    }
-    .show-menu {
-        width: 100%;
-        height: 200px;
-        margin: 0;
-    }
 }
