--- a/css/index-style.css
+++ b/css/index-style.css
@@ -17,7 +17,7 @@ html {
 .slideshow {
     margin-top: 70px;
 }
-main{
+main {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -30,7 +30,7 @@ main{
     flex: 1 0 400px;
     /* width: 600px; */
     max-width: 500px;
-    margin: 20px auto;
+    margin: 50px auto;
     float: left;
     justify-content: center;
 }
@@ -40,6 +40,7 @@ main{
     text-align: center;
     font-weight: bold;
     border-radius: 10px 10px 0 0;
+    margin: 0;
 }
 .strawberry,
 .strawberry-canape {
