--- a/css/strawberry-recipe-style.css
+++ b/css/strawberry-recipe-style.css
@@ -50,3 +50,10 @@
     display: block;
     margin: auto;
 }
+footer {
+    background: #FFF795;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+}
