이미지 위치 조정

--- a/css/strawberry-recipe-style.css
+++ b/css/strawberry-recipe-style.css
@@ -9,12 +9,12 @@
     height: 1854px;
 }
 .middle {
-    height: 1000px;
+    height: 1854px;
     background: #FFDDE5;
 }
 .strawberry-receipe {
     background: #FFDDE5;
-    margin: 20px 0 20px 0;
+    margin: 50px 0 20px 75px;
 }
 .strawberry-receipe h3 {
     font-weight: normal;
