--- a/css/summer-style.css
+++ b/css/summer-style.css
@@ -16,8 +16,8 @@
 .summer {
     width : auto;
     height: auto;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 140px;
 }
 .banner>h1 {
     position: absolute;
